--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
       <div class="topControls">
         <div class="seg">
           <button class="segBtn" id="tabStandings" data-tab="standings">順位表</button>
-          <button class="segBtn" id="tabSchedule" data-tab="schedule">日程</button>
-          <button class="segBtn" id="tabResults" data-tab="results">結果</button>
-          <button class="segBtn" id="tabClubs" data-tab="clubs">クラブ</button>
+          <button class="segBtn" id="tabSchedule" data-tab="schedule">日程/結果</button>
+<button class="segBtn" id="tabClubs" data-tab="clubs">クラブ</button>
         </div>
         <div class="actions">
           <button class="pill" id="btnManage">管理</button>
@@ -88,16 +87,7 @@
         </div>
         <div class="list" id="scheduleList"></div>
       </section>
-
-      <section class="card hidden" id="viewResults">
-        <div class="cardHeader">
-          <h2>結果</h2>
-          <button class="pill" id="btnAllResults">全結果</button>
-        </div>
-        <div class="list" id="resultsList"></div>
-      </section>
-
-      <section class="card hidden" id="viewClubs">
+<section class="card hidden" id="viewClubs">
         <div class="cardHeader">
           <h2>クラブ一覧</h2>
           <div class="smallHint">クラブをタップで詳細（戦績/今後の対戦/結果）</div>
