--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             </thead>
             <tbody id="standingsBody"></tbody>
           </table>
+          <div id="rankLegend" class="rankLegend"></div>
         </div>
       </section>
 
