--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="actions">
           <button class="pill" id="btnManage">管理</button>
-          <button class="pill" id="btnNewSeason">切り替え</button>
+          <button class="pill" id="btnNewSeason">新シーズン作成</button>
           <button class="pill warn" id="btnEndSeason">シーズン終了</button>
         </div>
       </div>
