--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <tbody id="standingsBody"></tbody>
           </table>
         </div>
+        <div class="rankLegend" id="rankLegend"></div>
       </section>
 
       <section class="card hidden" id="viewSchedule">
