--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
           <div class="logoFallback" id="leagueLogoFallback">🏳️</div>
         </div>
         <div class="brandMeta">
-          <div class="brandTitle" id="leagueName">League</div>
+          <div class="brandTitleRow">
+            <div class="brandTitle" id="leagueName">League</div>
+            <button class="pill small" id="btnRegistry">登録チーム一覧</button>
+          </div>
           <div class="brandSub">
             <span id="seasonName">Season 1</span>
           </div>
